[package]
name = "passwordcheck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "5.5.3"
reqwest = { version = "0.11.22", default-features=false, features = ["stream", "rustls-tls"] }
sha1 = "0.10.6"
tokio = { version = "1.33.0", features = ["full"] }
tokio-util = { version = "0.7.9", features = ["io"] }
